testdata/language-features/basic-values/case04.reject.out
type error: can not unify
  ()
with
  Char
in ./testdata/language-features/basic-values/case04.reject.lc:2:8:
  1 -> '1'
       ^^^
------------ trace
!type error: can not unify
  ()
with
  Char
in ./testdata/language-features/basic-values/case04.reject.lc:2:8:
  1 -> '1'
       ^^^
------------ tooltips
2:8-2:11
    Char
3:8-3:10
    ()