testdata/language-features/basic-values/case04.reject.lc
value1 = case 1 of
  1 -> '1'
  _ -> ()
